[gd_scene load_steps=2 format=3]

[ext_resource type="Script" path="res://ui/components/digimon_picker_popup.gd" id="1"]

[node name="DigimonPickerPopup" type="Window"]
title = "Select Digimon"
size = Vector2i(900, 650)
unresizable = false
exclusive = true
script = ExtResource("1")

[node name="MarginContainer" type="MarginContainer" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 10.0
offset_top = 10.0
offset_right = -10.0
offset_bottom = -10.0

[node name="VBox" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2

[node name="HSplit" type="HSplitContainer" parent="MarginContainer/VBox"]
layout_mode = 2
size_flags_vertical = 3
split_offset = 320

[node name="LeftPanel" type="VBoxContainer" parent="MarginContainer/VBox/HSplit"]
layout_mode = 2
custom_minimum_size = Vector2(300, 0)

[node name="SearchField" type="LineEdit" parent="MarginContainer/VBox/HSplit/LeftPanel"]
layout_mode = 2
placeholder_text = "Search species..."

[node name="SpeciesList" type="ItemList" parent="MarginContainer/VBox/HSplit/LeftPanel"]
layout_mode = 2
size_flags_vertical = 3

[node name="RightPanel" type="VBoxContainer" parent="MarginContainer/VBox/HSplit"]
layout_mode = 2
custom_minimum_size = Vector2(480, 0)

[node name="PreviewPanel" type="VBoxContainer" parent="MarginContainer/VBox/HSplit/RightPanel"]
layout_mode = 2
size_flags_vertical = 3

[node name="HeaderRow" type="HBoxContainer" parent="MarginContainer/VBox/HSplit/RightPanel/PreviewPanel"]
layout_mode = 2

[node name="SpritePreview" type="TextureRect" parent="MarginContainer/VBox/HSplit/RightPanel/PreviewPanel/HeaderRow"]
layout_mode = 2
custom_minimum_size = Vector2(96, 96)
expand_mode = 1
stretch_mode = 5

[node name="InfoVBox" type="VBoxContainer" parent="MarginContainer/VBox/HSplit/RightPanel/PreviewPanel/HeaderRow"]
layout_mode = 2
size_flags_horizontal = 3

[node name="NameLabel" type="Label" parent="MarginContainer/VBox/HSplit/RightPanel/PreviewPanel/HeaderRow/InfoVBox"]
layout_mode = 2
theme_override_font_sizes/font_size = 18
text = ""

[node name="AttributeLabel" type="Label" parent="MarginContainer/VBox/HSplit/RightPanel/PreviewPanel/HeaderRow/InfoVBox"]
layout_mode = 2
text = ""

[node name="ElementLabel" type="Label" parent="MarginContainer/VBox/HSplit/RightPanel/PreviewPanel/HeaderRow/InfoVBox"]
layout_mode = 2
text = ""

[node name="StatsSection" type="VBoxContainer" parent="MarginContainer/VBox/HSplit/RightPanel/PreviewPanel"]
layout_mode = 2

[node name="StatsLabel" type="Label" parent="MarginContainer/VBox/HSplit/RightPanel/PreviewPanel/StatsSection"]
layout_mode = 2
text = "Base Stats"
theme_override_font_sizes/font_size = 14

[node name="StatBars" type="VBoxContainer" parent="MarginContainer/VBox/HSplit/RightPanel/PreviewPanel/StatsSection"]
layout_mode = 2

[node name="BSTLabel" type="Label" parent="MarginContainer/VBox/HSplit/RightPanel/PreviewPanel/StatsSection"]
layout_mode = 2
text = ""

[node name="AbilitiesLabel" type="Label" parent="MarginContainer/VBox/HSplit/RightPanel/PreviewPanel"]
layout_mode = 2
text = ""

[node name="TechniqueCountLabel" type="Label" parent="MarginContainer/VBox/HSplit/RightPanel/PreviewPanel"]
layout_mode = 2
text = ""

[node name="ConfigPanel" type="VBoxContainer" parent="MarginContainer/VBox/HSplit/RightPanel"]
layout_mode = 2
size_flags_vertical = 3
visible = false

[node name="ConfigTitle" type="Label" parent="MarginContainer/VBox/HSplit/RightPanel/ConfigPanel"]
layout_mode = 2
theme_override_font_sizes/font_size = 16
text = ""

[node name="LevelRow" type="HBoxContainer" parent="MarginContainer/VBox/HSplit/RightPanel/ConfigPanel"]
layout_mode = 2

[node name="LevelLabel" type="Label" parent="MarginContainer/VBox/HSplit/RightPanel/ConfigPanel/LevelRow"]
layout_mode = 2
text = "Level:"

[node name="LevelSpinBox" type="SpinBox" parent="MarginContainer/VBox/HSplit/RightPanel/ConfigPanel/LevelRow"]
layout_mode = 2
min_value = 1.0
max_value = 100.0
value = 5.0

[node name="AbilityRow" type="HBoxContainer" parent="MarginContainer/VBox/HSplit/RightPanel/ConfigPanel"]
layout_mode = 2

[node name="AbilityLabel" type="Label" parent="MarginContainer/VBox/HSplit/RightPanel/ConfigPanel/AbilityRow"]
layout_mode = 2
text = "Ability:"

[node name="AbilityOption" type="OptionButton" parent="MarginContainer/VBox/HSplit/RightPanel/ConfigPanel/AbilityRow"]
layout_mode = 2
size_flags_horizontal = 3

[node name="ConfigScroll" type="ScrollContainer" parent="MarginContainer/VBox/HSplit/RightPanel/ConfigPanel"]
layout_mode = 2
size_flags_vertical = 3

[node name="ScrollVBox" type="VBoxContainer" parent="MarginContainer/VBox/HSplit/RightPanel/ConfigPanel/ConfigScroll"]
layout_mode = 2
size_flags_horizontal = 3

[node name="IVSection" type="VBoxContainer" parent="MarginContainer/VBox/HSplit/RightPanel/ConfigPanel/ConfigScroll/ScrollVBox"]
layout_mode = 2

[node name="IVLabel" type="Label" parent="MarginContainer/VBox/HSplit/RightPanel/ConfigPanel/ConfigScroll/ScrollVBox/IVSection"]
layout_mode = 2
text = "Individual Values"
theme_override_font_sizes/font_size = 14

[node name="IVSliders" type="VBoxContainer" parent="MarginContainer/VBox/HSplit/RightPanel/ConfigPanel/ConfigScroll/ScrollVBox/IVSection"]
layout_mode = 2

[node name="TVSection" type="VBoxContainer" parent="MarginContainer/VBox/HSplit/RightPanel/ConfigPanel/ConfigScroll/ScrollVBox"]
layout_mode = 2

[node name="TVLabel" type="Label" parent="MarginContainer/VBox/HSplit/RightPanel/ConfigPanel/ConfigScroll/ScrollVBox/TVSection"]
layout_mode = 2
text = "Training Values"
theme_override_font_sizes/font_size = 14

[node name="TVSliders" type="VBoxContainer" parent="MarginContainer/VBox/HSplit/RightPanel/ConfigPanel/ConfigScroll/ScrollVBox/TVSection"]
layout_mode = 2

[node name="TechniqueSection" type="VBoxContainer" parent="MarginContainer/VBox/HSplit/RightPanel/ConfigPanel/ConfigScroll/ScrollVBox"]
layout_mode = 2

[node name="TechniqueLabel" type="Label" parent="MarginContainer/VBox/HSplit/RightPanel/ConfigPanel/ConfigScroll/ScrollVBox/TechniqueSection"]
layout_mode = 2
text = "Techniques (select up to 4)"

[node name="TechniqueList" type="ItemList" parent="MarginContainer/VBox/HSplit/RightPanel/ConfigPanel/ConfigScroll/ScrollVBox/TechniqueSection"]
layout_mode = 2
custom_minimum_size = Vector2(0, 150)
select_mode = 1

[node name="ConfigButtonRow" type="HBoxContainer" parent="MarginContainer/VBox/HSplit/RightPanel/ConfigPanel"]
layout_mode = 2
alignment = 2

[node name="BackButton" type="Button" parent="MarginContainer/VBox/HSplit/RightPanel/ConfigPanel/ConfigButtonRow"]
layout_mode = 2
text = "Back"

[node name="ConfirmButton" type="Button" parent="MarginContainer/VBox/HSplit/RightPanel/ConfigPanel/ConfigButtonRow"]
layout_mode = 2
text = "Confirm"

[node name="ButtonRow" type="HBoxContainer" parent="MarginContainer/VBox"]
layout_mode = 2
alignment = 2

[node name="AddButton" type="Button" parent="MarginContainer/VBox/ButtonRow"]
layout_mode = 2
text = "Add to Team"

[node name="CancelButton" type="Button" parent="MarginContainer/VBox/ButtonRow"]
layout_mode = 2
text = "Cancel"
